apps/idp/base/namespace.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.36.1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
