apps/idp/base/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-admin
spec:
  parentRefs:
  - name: keycloak
  hostnames:
  - auth.seigra.net
  rules:
  - backendRefs:
    - name: keycloak
      port: 8080
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-public
spec:
  parentRefs:
  - name: keycloak
  hostnames:
  - auth.seigra.net
  rules:
  - backendRefs:
    - name: keycloak
      port: 8080
    matches:
    - path:
        value: /realms/home
    - path:
        value: /resources
